--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
+  <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css" />
+  <script src="https://js.arcgis.com/4.18/"></script>
+
   <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/css/main.css">
   <script src="https://js.arcgis.com/4.18/"></script>
 
